# onecortex-python-client

./: .gitignore  CLAUDE.md  README.md  lefthook.yml  pyproject.toml
.claude/commands/: format.md  test.md
scripts/: sdk-parity-reminder.sh
src/onecortex/: __init__.py  _client.py  _http.py  exceptions.py
src/onecortex/auth/: __init__.py  _client.py  models.py
src/onecortex/vector/: __init__.py  _client.py  _index.py  models.py
tests/integration/: conftest.py  test_embedder_search.py  test_error_contract.py  test_live_server.py
tests/unit/: test_client.py  test_errors.py  test_models.py  test_vector_client.py  test_vector_index.py
